# ocaml-opencv

./: .gitignore  .merlin  META  Makefile  Opencv.Algorithm.html  Opencv.Clahe.html  Opencv.Cv.html  Opencv.Cvconst.html  Opencv.Cvdata.html  Opencv.D_match.html  Opencv.Draw.html  Opencv.Generalized_hough.html  Opencv.Generalized_hough_ballard.html  Opencv.Generalized_hough_guil.html  Opencv.Key_point.html  Opencv.Line_segment_detector.html  Opencv.Mat.html  Opencv.Mat1.html  Opencv.Moments.html  Opencv.Rng.html  Opencv.Scalar.html  Opencv.Sparse_mat.html  Opencv.Subdiv2_d.html  Opencv.U_mat.html  Opencv.Video_capture.html  Opencv.Video_writer.html  Opencv.html  README.md  _tags  cvdata.mli  dune  dune-project  generator.py  glue.cpp  glue.h  glue.ml  glue.mli  hdr_parser.py  html.stamp  index.html  (+39 more)
.github/workflows/: docs.yml
config/: discover.ml
demos/basic/: Makefile  basic.ml  dune
demos/reuse/: Makefile  dune  reuse.ml
incl/: cvdata.ml.incl  cvdata.mli.incl  loader.ml.incl  mat.ml.incl  mat.mli.incl  scalar.ml.incl  scalar.mli.incl  vector.ml.incl  vector.mli.incl
opencv/: index.html
opencv/Opencv/: index.html
opencv/Opencv/Algorithm/: index.html
opencv/Opencv__/: index.html
opencv/Opencv__Cvdata/: index.html
opencv/Opencv__Loader/: index.html
opencv/Opencv__Mat/: index.html
opencv/Opencv__Scalar/: index.html
opencv/Opencv__Vector/: index.html
src/: cvdata.ml  dune  loader.ml  mat.mli  scalar.ml  scalar.mli  vector.ml  vector.mli
tests/demo/: Makefile  demo.ml
tests/demo_reuse/: .merlin  Makefile  demo_reuse.ml
(+27 files in other folders)
