(library
 (name            opencv)
 (public_name     opencv)
 (libraries       ctypes ctypes.foreign)
 (flags :standard -w -32)
 (foreign_stubs
  (language cxx)
  (names opencv glue)
  (flags :standard -g -std=c++11 -pedantic -Werror -Wall (:include c_flags.sexp)))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action  (run ./config/discover.exe)))

(rule
 (targets opencv.cpp opencv.h opencv.ml opencv.mli)
 (deps
  (:generator_src hdr_parser.py type_manager.py)
  (:generator generator.py)
  (glob_files incl/*.incl)
 )
 (action (run %{generator} .))
)
